# python-devcontainer-cookiecutter-arm

./: README.md  cookiecutter.json
{{cookiecutter.etl_name_slug}}/: .gitignore  Dockerfile  README.md  mac_podman_machine_init.sh  pyproject.toml  sample.env
{{cookiecutter.etl_name_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.etl_name_slug}}/src/: run_{{cookiecutter.etl_package_name}}_with_param.sh
{{cookiecutter.etl_name_slug}}/src/{{cookiecutter.etl_package_name}}/: {{cookiecutter.etl_package_name}}.py
{{cookiecutter.etl_name_slug}}/test/: test_act_{{cookiecutter.etl_package_name}}.py
